// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

message Probe {
    string kind = 1;
    Http   http = 2;
    Exec   exec = 3;

    message Exec {
        repeated string command = 1;
    }

    message Http {
        string path           = 1;
        int32  container_port = 2;
    }
}